tests/error_display/test_hll_immutable_assign_display.err.expected
error: at 4:13: [HMC-AssignToImmutable] In function 'f': cannot assign to immutable binding 'x'
   |
 4 |             x = 2;
   |             ^
